WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167917
Object.preventExtensions() on a Location object should throw a TypeError
https://bugs.webkit.org/show_bug.cgi?id=167917
Summary
Object.preventExtensions() on a Location object should throw a TypeError
Chris Dumez
Reported
2017-02-06 18:59:42 PST
Object.preventExtensions() on a Location object should throw a TypeError: -
https://html.spec.whatwg.org/#location-preventextensions
-
https://www.ecma-international.org/ecma-262/7.0/index.html#sec-object.preventextensions
Firefox already implements this.
Attachments
Patch
(8.25 KB, patch)
2017-02-06 19:45 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-02-06 19:45:03 PST
Created
attachment 300778
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-07 00:52:41 PST
Comment on
attachment 300778
[details]
Patch Clearing flags on attachment: 300778 Committed
r211778
: <
http://trac.webkit.org/changeset/211778
>
WebKit Commit Bot
Comment 3
2017-02-07 00:52:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug