Object.preventExtensions() on a Location object should throw a TypeError https://bugs.webkit.org/show_bug.cgi?id=167917

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline web platform test now that one more check is passing.

* web-platform-tests/html/browsers/origin/cross-origin-objects/cross-origin-objects-expected.txt:

Source/WebCore:

Object.preventExtensions() on a Location object should throw a TypeError:
- https://html.spec.whatwg.org/#location-preventextensions
- https://www.ecma-international.org/ecma-262/7.0/index.html#sec-object.preventextensions

Firefox already implements this.

No new tests, rebaselined existing tests.

* bindings/js/JSLocationCustom.cpp:
(WebCore::JSLocation::preventExtensions):

LayoutTests:

Rebaseline test now that more checks are passing.

* http/tests/security/preventExtensions-window-location-expected.txt:
* http/tests/security/preventExtensions-window-location.html:


Canonical link: https://commits.webkit.org/184952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211778 268f45cc-cd09-0410-ab3c-d52691b4dbfc